fix: scrollbars windows

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,8 +74,3 @@
     @apply text-h6;
   }
 }
-
-body {
-  height: 100vh;
-  width: 100vw;
-}
